Assignment question 1.1 modofied

--- a/python/basics/python-assignment-3.ipynb
+++ b/python/basics/python-assignment-3.ipynb
@@ -9,11 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reduce(func,l):\n",
+    "import functools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myreduce(func,l):\n",
     "    # set result as the first element of the list \n",
     "    result = l[0]\n",
     "    # not use the list without first element (0th index value)\n",
@@ -26,65 +35,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myreduce :  21\n",
+      "reduce :  21\n"
+     ]
     }
    ],
    "source": [
     "f = lambda x,y : x+y \n",
-    "reduce(f,[1,2,3,4,5,6])"
+    "print(\"myreduce : \",myreduce(f,[1,2,3,4,5,6]))\n",
+    "print(\"reduce : \",functools.reduce(f,[1,2,3,4,5,6]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "12000000"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myreduce :  12000000\n",
+      "reduce :  12000000\n"
+     ]
     }
    ],
    "source": [
     "f = lambda x,y : x*y\n",
-    "reduce(f,[10,20,30,40,50])"
+    "print(\"myreduce : \",myreduce(f,[10,20,30,40,50]))\n",
+    "print(\"reduce : \",functools.reduce(f,[10,20,30,40,50]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-16"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myreduce :  -16\n",
+      "reduce :  -16\n"
+     ]
     }
    ],
    "source": [
     "f  = lambda x,y : (x+y)*(x-y)\n",
-    "reduce(f,[1,2,3,4])"
+    "print(\"myreduce : \",myreduce(f,[1,2,3,4]))\n",
+    "print(\"reduce : \",functools.reduce(f,[1,2,3,4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 Write a Python program to implement your own myfilter() function which works exactly like Python's built-in function filter()"
    ]
   },
   {
@@ -92,7 +105,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def flter()"
+   ]
   }
  ],
  "metadata": {
