modified Question 2 - List comprehensions

--- a/python/basics/python-assignment-3.ipynb
+++ b/python/basics/python-assignment-3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -252,17 +252,20 @@
    ],
    "source": [
     "w = [\"x\",\"y\",\"z\"]\n",
+    "'''\n",
     "l = []\n",
     "for i in w:\n",
     "    for j in range(1,5):\n",
     "        #print(i*j,end=' ')\n",
     "        l.append(i*j)\n",
-    "print(l)"
+    "print(l)\n",
+    "'''\n",
+    "print([j*i for i in w for j in range(1,5)])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -275,17 +278,20 @@
    ],
    "source": [
     "w = [\"x\",\"y\",\"z\"]\n",
-    "l = [] \n",
+    "'''\n",
+    "l = []\n",
     "for i in range(1,5):\n",
     "    for j in w:\n",
     "        #print(j*i,end=\" \")\n",
     "        l.append(j*i)\n",
-    "print(l)"
+    "print(l)\n",
+    "'''\n",
+    "print([i*j for j in range(1,5) for i in w])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -298,16 +304,19 @@
    ],
    "source": [
     "w  = [2,3,4]\n",
+    "\"\"\"\n",
     "l = [] \n",
     "for i in w:\n",
     "    for j in range(0,3):\n",
     "        l.append([i+j])\n",
-    "print(l)"
+    "print(l)\n",
+    "\"\"\"\n",
+    "print([[i+j] for j in range(0,3) for i in w])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +329,7 @@
    ],
    "source": [
     "w = [2,3,4,5]\n",
+    "'''\n",
     "l = []\n",
     "for i in  range(0,4):\n",
     "    m = [] \n",
@@ -328,28 +338,33 @@
     "    \n",
     "    l.append(m)\n",
     "\n",
-    "print(l)"
+    "print(l)\n",
+    "'''\n",
+    "print([[i+j for i in w]for j in range(0,4)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 1), (2, 1), (3, 1), (1, 2), (2, 2), (3, 2), (1, 3), (2, 3), (3, 3)]\n"
+      "[(1, 1), (1, 2), (1, 3), (2, 1), (2, 2), (2, 3), (3, 1), (3, 2), (3, 3)]\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
     "l = [] \n",
     "for i in range(1,4):\n",
     "    for j in range(1,4):\n",
     "        l.append((j,i))\n",
-    "print(l)"
+    "print(l)\n",
+    "\"\"\"\n",
+    "print( [ (j,i) for j in range(1,4) for i in range(1,4) ])"
    ]
   }
  ],
