--- a/lecturenote/lecture101.ipynb
+++ b/lecturenote/lecture101.ipynb
@@ -569,8 +569,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/gradient_descent.png\" width=600 />\n",
-    "<img src=\"images/fig-2-gradient-descent-steps.gif\" width=600 />"
+    "![](images/gradient_descent.png)\n",
+    "![](images/fig-2-gradient-descent-steps.gif)"
    ]
   },
   {
