--- a/lecturenote/lecture101.ipynb
+++ b/lecturenote/lecture101.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So now we can see that simple relation is not perfect , becoz the predicted value is not equal or near to the actual value that we observed in our datases (but some height it may give correct values) \n",
+    "So now we can see that simple relation is not perfect , becoz the predicted value is not equal or near to the actual value that we observed in our dataset (but for some height ,  it may give correct values) \n",
     "\n",
     "But this is not learning , becoz we only find ${\\beta}$ and ${\\epsilon}$ by considering only 2 datapoints . Here we only solved a linear equation , and nothing more . \n",
     "\n",
@@ -551,8 +551,9 @@
    "source": [
     "- Gradient descent is an optimization algorithm used to minimize some function by iteratively moving in the direction of steepest descent as defined by the negative of the gradient <br/>\n",
     "\n",
+    "#### Algorithm \n",
     "\n",
-    "**Repeat until convergence:** <br/>\n",
+    "Repeat until convergence: <br/>\n",
     "\n",
     "1. Given the gradient, calculate the change in the parameters with the learning rate.\n",
     "2. Re-calculate the new gradient with the new value of the parameter.\n",
@@ -582,11 +583,11 @@
     "<font size=4>\n",
     "To update ${\\beta}$ and ${\\epsilon}$ we need to find the following  <br/>\n",
     "\n",
-    "- $ \\frac {\\partial{E}_{error}}{\\partial{\\beta}}\\qquad$  -- rate of change of Error with respect to $\\beta$ <br/>\n",
+    "1.  $ \\frac {\\partial{E}_{error}}{\\partial{\\beta}}\\qquad$  -- rate of change of Error with respect to $\\beta$ <br/>\n",
     "\n",
-    "- $ \\frac {\\partial{E}_{error}}{\\partial{\\epsilon}}\\qquad$ -- rate of change of Error with respect to $\\epsilon$ <br/><br/>\n",
+    "2.  $ \\frac {\\partial{E}_{error}}{\\partial{\\epsilon}}\\qquad$ -- rate of change of Error with respect to $\\epsilon$ <br/><br/>\n",
     "\n",
-    "We can update $\\beta$ and $\\epsilon$ using following equations (update rule) <br/>\n",
+    "Then we can update $\\beta$ and $\\epsilon$ using following equations (update rule) <br/>\n",
     "\n",
     "${\\beta}_{i} = {\\beta}_{i-1} -  \\eta \\frac {\\partial{E}_{error}}{\\partial{\\beta}} $ <br/>\n",
     "\n",
