--- a/lecturenote/lecture101.ipynb
+++ b/lecturenote/lecture101.ipynb
@@ -175,7 +175,7 @@
     "  where ${\\beta}$ is **constant** and ${\\epsilon}$ is **error** \n",
     "  \n",
     "\n",
-    "**Eq1.1** is look like   ${y} = {m}{x} + {c}\\quad$ (equation of a line) where m : slope and c : y-intercepte\n",
+    "**Eq1.1** is look like   ${y} = {m}{x} + {c}\\quad$ (equation of a line) where m : slope and c : y-intercept\n",
     "\n",
     "So comparing both equation we could see that ${\\beta}$ is slope and ${\\epsilon}$ is y-intercepte "
    ]
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "${y}$-intercepte , c (in ${y} = {mx} +{C}$ ) is the value of y when x = 0 \n",
+    "${y}$-intercept , c (in ${y} = {mx} +{C}$ ) is the value of y when x = 0 \n",
     "\n",
     "${m}$ is the slope of the line "
    ]
