--- a/lecturenote/lecture101.ipynb
+++ b/lecturenote/lecture101.ipynb
@@ -499,7 +499,7 @@
     "\n",
     "But this is not learning , becoz we only find ${\\beta}$ and ${\\epsilon}$ by considering only 2 datapoints . Here we only solved a linear equation , and nothing more . \n",
     "\n",
-    "when we take height as 5.4 and try to predict weight , we got 58 as weight . \n"
+    "when we take height as 5.4 , we got 58 as weight . \n"
    ]
   },
   {
